T6/ColorArtParser.py
# Generated from ColorArt.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ColorArtParser ( Parser ):

    grammarFileName = "ColorArt.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'cor'", "'{'", "'id'", "'='", "','", 
                     "'valor'", "'}'", "'variavel'", "'tipo'", "'circulo'", 
                     "'centro'", "'['", "']'", "'raio'", "'borda'", "'retangulo'", 
                     "'posicao'", "'largura'", "'altura'", "'linha'", "'inicio'", 
                     "'fim'", "'espessura'", "'poligono'", "'pontos'", "'inteiro'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CADEIA", "ID", 
                      "INT", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_declaration = 1
    RULE_shape = 2
    RULE_color = 3
    RULE_variable = 4
    RULE_circle = 5
    RULE_rectangle = 6
    RULE_line = 7
    RULE_polygon = 8
    RULE_points = 9
    RULE_point = 10
    RULE_tipo = 11
    RULE_value = 12

    ruleNames =  [ "programa", "declaration", "shape", "color", "variable", 
                   "circle", "rectangle", "line", "polygon", "points", "point", 
                   "tipo", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    CADEIA=27
    ID=28
    INT=29
    WS=30
    COMMENT=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ColorArtParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColorArtParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ColorArtParser.DeclarationContext,i)


        def shape(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColorArtParser.ShapeContext)
            else:
                return self.getTypedRuleContext(ColorArtParser.ShapeContext,i)


        def getRuleIndex(self):
            return ColorArtParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = ColorArtParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 8]:
                    self.state = 26
                    self.declaration()
                    pass
                elif token in [10, 16, 20, 24]:
                    self.state = 27
                    self.shape()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 17892610) != 0)):
                    break

            self.state = 32
            self.match(ColorArtParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def color(self):
            return self.getTypedRuleContext(ColorArtParser.ColorContext,0)


        def variable(self):
            return self.getTypedRuleContext(ColorArtParser.VariableContext,0)


        def getRuleIndex(self):
            return ColorArtParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ColorArtParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 36
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.color()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def circle(self):
            return self.getTypedRuleContext(ColorArtParser.CircleContext,0)


        def rectangle(self):
            return self.getTypedRuleContext(ColorArtParser.RectangleContext,0)


        def line(self):
            return self.getTypedRuleContext(ColorArtParser.LineContext,0)


        def polygon(self):
            return self.getTypedRuleContext(ColorArtParser.PolygonContext,0)


        def getRuleIndex(self):
            return ColorArtParser.RULE_shape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape" ):
                listener.enterShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape" ):
                listener.exitShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape" ):
                return visitor.visitShape(self)
            else:
                return visitor.visitChildren(self)




    def shape(self):

        localctx = ColorArtParser.ShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_shape)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.circle()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.rectangle()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.line()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.polygon()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColorArtParser.ID, 0)

        def CADEIA(self):
            return self.getToken(ColorArtParser.CADEIA, 0)

        def getRuleIndex(self):
            return ColorArtParser.RULE_color

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColor" ):
                listener.enterColor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColor" ):
                listener.exitColor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColor" ):
                return visitor.visitColor(self)
            else:
                return visitor.visitChildren(self)




    def color(self):

        localctx = ColorArtParser.ColorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_color)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(ColorArtParser.T__0)
            self.state = 45
            self.match(ColorArtParser.T__1)
            self.state = 46
            self.match(ColorArtParser.T__2)
            self.state = 47
            self.match(ColorArtParser.T__3)
            self.state = 48
            self.match(ColorArtParser.ID)
            self.state = 49
            self.match(ColorArtParser.T__4)
            self.state = 50
            self.match(ColorArtParser.T__5)
            self.state = 51
            self.match(ColorArtParser.T__3)
            self.state = 52
            self.match(ColorArtParser.CADEIA)
            self.state = 53
            self.match(ColorArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ColorArtParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(ColorArtParser.TipoContext,0)


        def value(self):
            return self.getTypedRuleContext(ColorArtParser.ValueContext,0)


        def getRuleIndex(self):
            return ColorArtParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = ColorArtParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ColorArtParser.T__7)
            self.state = 56
            self.match(ColorArtParser.T__1)
            self.state = 57
            self.match(ColorArtParser.T__2)
            self.state = 58
            self.match(ColorArtParser.T__3)
            self.state = 59
            self.match(ColorArtParser.ID)
            self.state = 60
            self.match(ColorArtParser.T__4)
            self.state = 61
            self.match(ColorArtParser.T__8)
            self.state = 62
            self.match(ColorArtParser.T__3)
            self.state = 63
            self.tipo()
            self.state = 64
            self.match(ColorArtParser.T__4)
            self.state = 65
            self.match(ColorArtParser.T__5)
            self.state = 66
            self.match(ColorArtParser.T__3)
            self.state = 67
            self.value()
            self.state = 68
            self.match(ColorArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CircleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.INT)
            else:
                return self.getToken(ColorArtParser.INT, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.ID)
            else:
                return self.getToken(ColorArtParser.ID, i)

        def getRuleIndex(self):
            return ColorArtParser.RULE_circle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCircle" ):
                listener.enterCircle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCircle" ):
                listener.exitCircle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCircle" ):
                return visitor.visitCircle(self)
            else:
                return visitor.visitChildren(self)




    def circle(self):

        localctx = ColorArtParser.CircleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_circle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ColorArtParser.T__9)
            self.state = 71
            self.match(ColorArtParser.T__1)
            self.state = 72
            self.match(ColorArtParser.T__10)
            self.state = 73
            self.match(ColorArtParser.T__3)
            self.state = 74
            self.match(ColorArtParser.T__11)
            self.state = 75
            self.match(ColorArtParser.INT)
            self.state = 76
            self.match(ColorArtParser.T__4)
            self.state = 77
            self.match(ColorArtParser.INT)
            self.state = 78
            self.match(ColorArtParser.T__12)
            self.state = 79
            self.match(ColorArtParser.T__4)
            self.state = 80
            self.match(ColorArtParser.T__13)
            self.state = 81
            self.match(ColorArtParser.T__3)
            self.state = 82
            self.match(ColorArtParser.INT)
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 83
                self.match(ColorArtParser.T__4)
                self.state = 84
                self.match(ColorArtParser.T__0)
                self.state = 85
                self.match(ColorArtParser.T__3)
                self.state = 86
                self.match(ColorArtParser.T__11)
                self.state = 87
                self.match(ColorArtParser.ID)
                self.state = 88
                self.match(ColorArtParser.T__12)


            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 91
                self.match(ColorArtParser.T__4)
                self.state = 92
                self.match(ColorArtParser.T__14)
                self.state = 93
                self.match(ColorArtParser.T__3)
                self.state = 94
                self.match(ColorArtParser.T__11)
                self.state = 95
                self.match(ColorArtParser.ID)
                self.state = 96
                self.match(ColorArtParser.T__12)


            self.state = 99
            self.match(ColorArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RectangleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.INT)
            else:
                return self.getToken(ColorArtParser.INT, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.ID)
            else:
                return self.getToken(ColorArtParser.ID, i)

        def getRuleIndex(self):
            return ColorArtParser.RULE_rectangle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRectangle" ):
                listener.enterRectangle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRectangle" ):
                listener.exitRectangle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRectangle" ):
                return visitor.visitRectangle(self)
            else:
                return visitor.visitChildren(self)




    def rectangle(self):

        localctx = ColorArtParser.RectangleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rectangle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ColorArtParser.T__15)
            self.state = 102
            self.match(ColorArtParser.T__1)
            self.state = 103
            self.match(ColorArtParser.T__16)
            self.state = 104
            self.match(ColorArtParser.T__3)
            self.state = 105
            self.match(ColorArtParser.T__11)
            self.state = 106
            self.match(ColorArtParser.INT)
            self.state = 107
            self.match(ColorArtParser.T__4)
            self.state = 108
            self.match(ColorArtParser.INT)
            self.state = 109
            self.match(ColorArtParser.T__12)
            self.state = 110
            self.match(ColorArtParser.T__4)
            self.state = 111
            self.match(ColorArtParser.T__17)
            self.state = 112
            self.match(ColorArtParser.T__3)
            self.state = 113
            self.match(ColorArtParser.INT)
            self.state = 114
            self.match(ColorArtParser.T__4)
            self.state = 115
            self.match(ColorArtParser.T__18)
            self.state = 116
            self.match(ColorArtParser.T__3)
            self.state = 117
            self.match(ColorArtParser.INT)
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 118
                self.match(ColorArtParser.T__4)
                self.state = 119
                self.match(ColorArtParser.T__0)
                self.state = 120
                self.match(ColorArtParser.T__3)
                self.state = 121
                self.match(ColorArtParser.T__11)
                self.state = 122
                self.match(ColorArtParser.ID)
                self.state = 123
                self.match(ColorArtParser.T__12)


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 126
                self.match(ColorArtParser.T__4)
                self.state = 127
                self.match(ColorArtParser.T__14)
                self.state = 128
                self.match(ColorArtParser.T__3)
                self.state = 129
                self.match(ColorArtParser.T__11)
                self.state = 130
                self.match(ColorArtParser.ID)
                self.state = 131
                self.match(ColorArtParser.T__12)


            self.state = 134
            self.match(ColorArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.INT)
            else:
                return self.getToken(ColorArtParser.INT, i)

        def ID(self):
            return self.getToken(ColorArtParser.ID, 0)

        def getRuleIndex(self):
            return ColorArtParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = ColorArtParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ColorArtParser.T__19)
            self.state = 137
            self.match(ColorArtParser.T__1)
            self.state = 138
            self.match(ColorArtParser.T__20)
            self.state = 139
            self.match(ColorArtParser.T__3)
            self.state = 140
            self.match(ColorArtParser.T__11)
            self.state = 141
            self.match(ColorArtParser.INT)
            self.state = 142
            self.match(ColorArtParser.T__4)
            self.state = 143
            self.match(ColorArtParser.INT)
            self.state = 144
            self.match(ColorArtParser.T__12)
            self.state = 145
            self.match(ColorArtParser.T__4)
            self.state = 146
            self.match(ColorArtParser.T__21)
            self.state = 147
            self.match(ColorArtParser.T__3)
            self.state = 148
            self.match(ColorArtParser.T__11)
            self.state = 149
            self.match(ColorArtParser.INT)
            self.state = 150
            self.match(ColorArtParser.T__4)
            self.state = 151
            self.match(ColorArtParser.INT)
            self.state = 152
            self.match(ColorArtParser.T__12)
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 153
                self.match(ColorArtParser.T__4)
                self.state = 154
                self.match(ColorArtParser.T__0)
                self.state = 155
                self.match(ColorArtParser.T__3)
                self.state = 156
                self.match(ColorArtParser.T__11)
                self.state = 157
                self.match(ColorArtParser.ID)
                self.state = 158
                self.match(ColorArtParser.T__12)


            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 161
                self.match(ColorArtParser.T__4)
                self.state = 162
                self.match(ColorArtParser.T__22)
                self.state = 163
                self.match(ColorArtParser.T__3)
                self.state = 164
                self.match(ColorArtParser.INT)


            self.state = 167
            self.match(ColorArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PolygonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def points(self):
            return self.getTypedRuleContext(ColorArtParser.PointsContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.ID)
            else:
                return self.getToken(ColorArtParser.ID, i)

        def getRuleIndex(self):
            return ColorArtParser.RULE_polygon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolygon" ):
                listener.enterPolygon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolygon" ):
                listener.exitPolygon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolygon" ):
                return visitor.visitPolygon(self)
            else:
                return visitor.visitChildren(self)




    def polygon(self):

        localctx = ColorArtParser.PolygonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_polygon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(ColorArtParser.T__23)
            self.state = 170
            self.match(ColorArtParser.T__1)
            self.state = 171
            self.match(ColorArtParser.T__24)
            self.state = 172
            self.match(ColorArtParser.T__3)
            self.state = 173
            self.match(ColorArtParser.T__11)
            self.state = 174
            self.points()
            self.state = 175
            self.match(ColorArtParser.T__12)
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 176
                self.match(ColorArtParser.T__4)
                self.state = 177
                self.match(ColorArtParser.T__0)
                self.state = 178
                self.match(ColorArtParser.T__3)
                self.state = 179
                self.match(ColorArtParser.T__11)
                self.state = 180
                self.match(ColorArtParser.ID)
                self.state = 181
                self.match(ColorArtParser.T__12)


            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 184
                self.match(ColorArtParser.T__4)
                self.state = 185
                self.match(ColorArtParser.T__14)
                self.state = 186
                self.match(ColorArtParser.T__3)
                self.state = 187
                self.match(ColorArtParser.T__11)
                self.state = 188
                self.match(ColorArtParser.ID)
                self.state = 189
                self.match(ColorArtParser.T__12)


            self.state = 192
            self.match(ColorArtParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def point(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ColorArtParser.PointContext)
            else:
                return self.getTypedRuleContext(ColorArtParser.PointContext,i)


        def getRuleIndex(self):
            return ColorArtParser.RULE_points

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoints" ):
                listener.enterPoints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoints" ):
                listener.exitPoints(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoints" ):
                return visitor.visitPoints(self)
            else:
                return visitor.visitChildren(self)




    def points(self):

        localctx = ColorArtParser.PointsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_points)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.point()
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 195
                self.match(ColorArtParser.T__4)
                self.state = 196
                self.point()
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ColorArtParser.INT)
            else:
                return self.getToken(ColorArtParser.INT, i)

        def getRuleIndex(self):
            return ColorArtParser.RULE_point

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoint" ):
                listener.enterPoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoint" ):
                listener.exitPoint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoint" ):
                return visitor.visitPoint(self)
            else:
                return visitor.visitChildren(self)




    def point(self):

        localctx = ColorArtParser.PointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_point)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(ColorArtParser.INT)
            self.state = 203
            self.match(ColorArtParser.T__4)
            self.state = 204
            self.match(ColorArtParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ColorArtParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = ColorArtParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            _la = self._input.LA(1)
            if not(_la==1 or _la==26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ColorArtParser.INT, 0)

        def ID(self):
            return self.getToken(ColorArtParser.ID, 0)

        def getRuleIndex(self):
            return ColorArtParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = ColorArtParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 208
            _la = self._input.LA(1)
            if not(_la==28 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





